--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-source-wordpress": "^3.1.60",
     "gatsby-transformer-sharp": "^2.3.13",
+    "google-maps-react": "^2.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-burger-menu": "^2.6.13",
